@@ -4,7 +4,9 @@ update-manager (1:0.87.4) hardy; urgency=low
     - run the partial upgrader with error correction
       if the dependencies on the system are not ok
       (it will fix most problems)
-  
+  * DistUpgrade/DistUpgradeController.py, DistUpgradeCache.py:
+    - if dpkg was interrupted, run "dpkg --configure -a" 
+      automatically
 
  --
 
